--- a/crates/zeus-backend/Cargo.toml
+++ b/crates/zeus-backend/Cargo.toml
@@ -33,6 +33,8 @@ revm = { version = "9.0.0", features = [
     "optional_gas_refund",
 ] }
 
+rusqlite = { version = "0.31.0", features = ["bundled"] }
+
 tokio = { version = "1.35.1", features = ["full"] }
 crossbeam = "0.8.4"
 anyhow = "1.0.44"
