--- a/crates/zeus-gui/Cargo.toml
+++ b/crates/zeus-gui/Cargo.toml
@@ -13,12 +13,14 @@ zeus-types = {path = "../zeus-types"}
 
 alloy = { git = "https://github.com/alloy-rs/alloy", rev = "4000b77" }
 
+# GUI
 egui = "0.27.2"
 eframe = "0.27.2"
 egui_extras = {version = "0.27.2", features = ["svg", "image"]}
 hello_egui = "0.4.2"
 image = "0.25.1"
 
+rusqlite = { version = "0.31.0", features = ["bundled"] }
 tokio = { version = "1.35.1", features = ["full"] }
 anyhow = "1.0.44"
 crossbeam = "0.8.4"
