--- a/crates/zeus-types/Cargo.toml
+++ b/crates/zeus-types/Cargo.toml
@@ -38,7 +38,7 @@ sha2 = "0.10.8"
 
 
 
-
+bigdecimal = "0.4.5"
 tokio = { version = "1.35.1", features = ["full"] }
 thiserror = "1.0.37"
 tiny-keccak = "2.0.2"
