--- a/crates/zeus-backend/Cargo.toml
+++ b/crates/zeus-backend/Cargo.toml
@@ -37,6 +37,7 @@ revm = { version = "9.0.0", features = [
 r2d2_sqlite = "0.24.0"
 r2d2 = "0.8.10"
 
+tracing = "0.1.40"
 tokio = { version = "1.35.1", features = ["full"] }
 crossbeam = "0.8.4"
 anyhow = "1.0.44"
