--- a/crates/zeus-types/Cargo.toml
+++ b/crates/zeus-types/Cargo.toml
@@ -37,7 +37,7 @@ chacha20poly1305 = "0.10.1"
 sha2 = "0.10.8"
 
 
-
+tracing = "0.1.40"
 bigdecimal = "0.4.5"
 tokio = { version = "1.35.1", features = ["full"] }
 thiserror = "1.0.37"
