--- a/crates/zeus-backend/Cargo.toml
+++ b/crates/zeus-backend/Cargo.toml
@@ -10,20 +10,9 @@ zeus-types = { path = "../zeus-types" }
 zeus-utils = {path = "../zeus-utils"}
 
 
-alloy = { git = "https://github.com/alloy-rs/alloy", rev = "4000b77", features = [
-    "contract",
-    "network",
-    "node-bindings",
-    "providers",
-    "provider-ws",
-    "rpc-client",
-    "rpc-client-ws",
-    "rpc-types-eth",
-    "signers",
-    "signer-wallet",
-] }
+alloy = { version = "0.1", features = ["full"] }
 
-revm = { version = "9.0.0", features = [
+revm = { version = "10.0.0", features = [
     "serde",
     "std",
     "optional_block_gas_limit",
@@ -33,10 +22,11 @@ revm = { version = "9.0.0", features = [
     "optional_gas_refund",
 ] }
 
-
+rusqlite = { version = "0.31.0", features = ["bundled"] }
 r2d2_sqlite = "0.24.0"
 r2d2 = "0.8.10"
 
+bigdecimal = "0.4.5"
 tracing = "0.1.40"
 tokio = { version = "1.35.1", features = ["full"] }
 crossbeam = "0.8.4"
