--- a/crates/zeus-gui/Cargo.toml
+++ b/crates/zeus-gui/Cargo.toml
@@ -6,11 +6,13 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+# Local Crates
 zeus-utils = { path = "../zeus-utils" }
 zeus-backend = {path = "../zeus-backend"}
 zeus-types = {path = "../zeus-types"}
 
-alloy = { git = "https://github.com/alloy-rs/alloy", rev = "4000b77" }
+alloy = { version = "0.1", features = ["full"] }
 
 # Tracing
 tracing = "0.1.40"
@@ -18,16 +20,8 @@ tracing-subscriber = {version = "0.3.18", features = ["env-filter", "fmt"]}
 tracing-appender = "0.2.3"
 
 # GUI
-egui = "0.27.2"
 eframe = "0.27.2"
-egui_extras = {version = "0.27.2", features = ["svg", "image"]}
-hello_egui = "0.4.2"
-image = "0.25.1"
 
-rusqlite = { version = "0.31.0", features = ["bundled"] }
-tokio = { version = "1.35.1", features = ["full"] }
 anyhow = "1.0.44"
 crossbeam = "0.8.4"
-serde = "1.0.203"
-serde_json = "1.0.117"
 lazy_static = "1.4.0"
