--- a/crates/zeus-types/Cargo.toml
+++ b/crates/zeus-types/Cargo.toml
@@ -6,20 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-alloy = { git = "https://github.com/alloy-rs/alloy", rev = "4000b77", features = [
-    "contract",
-    "network",
-    "node-bindings",
-    "providers",
-    "provider-ws",
-    "rpc-client",
-    "rpc-client-ws",
-    "rpc-types-eth",
-    "signers",
-    "signer-wallet",
-] }
+alloy = { version = "0.1", features = ["full"] }
 
-revm = { version = "9.0.0", features = [
+revm = { version = "10.0.0", features = [
     "serde",
     "std",
     "optional_block_gas_limit",
