--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
-workspace = { members = ["crates/zeus-gui", "crates/zeus-utils", "crates/zeus-backend", "crates/zeus-types", "crates/zeus-utils"] }
+workspace = { members = ["crates/zeus-gui", "crates/zeus-backend", "crates/zeus-chain", "crates/zeus-core", "crates/zeus-shared-types"] }
 [package]
 name = "Zeus"
 authors = ["Michalis Molfetas"]
