improve the logic for requesting eth & erc20 balance

--- a/crates/zeus-shared-types/Cargo.toml
+++ b/crates/zeus-shared-types/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 zeus-core = { path = "../zeus-core" }
 zeus-chain = { path = "../zeus-chain" }
+
+tracing = "0.1.40"
