--- a/crates/zeus-core/Cargo.toml
+++ b/crates/zeus-core/Cargo.toml
@@ -15,6 +15,7 @@ aes-gcm = "0.10.3"
 chacha20poly1305 = "0.10.1"
 sha2 = "0.10.8"
 
+tracing = "0.1.40"
 lazy_static = "1.4.0"
 anyhow = "1.0.44"
 serde = "1.0.203"
