add SharedCache type
* Add a new struct SharedCache that can be shared across all tasks for for fetching data more conveniently

* Load all cached native and erc20 balances from the db at the startup so we can show them in the UI immediately

--- a/crates/zeus-shared-types/Cargo.toml
+++ b/crates/zeus-shared-types/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 zeus-core = { path = "../zeus-core" }
 zeus-chain = { path = "../zeus-chain" }
 
-# alloy-primitives = "0.7.7"
+alloy-primitives = "0.7.7"
 tracing = "0.1.40"
